Fix some dialogs on mobile

--- a/resources/sass/dialog.scss
+++ b/resources/sass/dialog.scss
@@ -47,7 +47,7 @@
         padding-block: 0.75rem;
         padding-bottom: 1rem;
     }
-    form {
+    form, .formless {
         display: grid;
         grid-template-rows: auto 1fr auto;
         align-items: start;
